Fix default database name

--- a/postgrestest.ini
+++ b/postgrestest.ini
@@ -14,7 +14,7 @@ PG_HOSTNAME=localhost
 PG_PORT=5432
 PG_USERNAME=postgres
 PG_PASSWORD=postgres
-PG_DATABASE=database
+PG_DATABASE=postgres
 
 [Database2]
 # The parameters for the first database to test
@@ -22,4 +22,4 @@ PG_HOSTNAME=localhost
 PG_PORT=65432
 PG_USERNAME=postgres
 PG_PASSWORD=postgres
-PG_DATABASE=database
+PG_DATABASE=postgres
