Modify the testing parameters.

--- a/postgrestest.ini
+++ b/postgrestest.ini
@@ -6,7 +6,10 @@ databases=Database1,Database2
 outdir=pgtestoutput
 
 # The number of queries to test, per trial.
-querycount=1000
+querycount=5000
+
+# The number of trials to perform
+testtrials=20
 
 [Database1]
 # The parameters for the first database to test
